--- a/testi/testimonial.html
+++ b/testi/testimonial.html
@@ -5,8 +5,8 @@
 <body>
 	
 
-<div class="container">
-	<div class="title">TESTIMONI PRODUK TERBARU</div>
+<div class="container-testimonial">
+	<div class="title-testimonial">TESTIMONI PRODUK TERBARU</div>
 	<div class="testimonial">
 		<div class="stars">
 			<i class="fas fa-star"></i>
