--- a/lp/lp.html
+++ b/lp/lp.html
@@ -181,7 +181,48 @@
 
 
     <!-- VIP KONTAINER -->
+    <div class="container-vip">
+        <div class="header-vip">
+            <h1>VIP</h1>
+            <p>Bergabunglah dengan platform VIP trading terbaik dan raih keuntungan maksimal.</p>
+            
+        </div>
 
+        <div class="content-vip">
+            <div class="benefits">
+                <h2>7 Keuntungan Bergabung</h2>
+                <ul>
+                    <li>Full Edukasi</li>
+                    <li>Signal Trading 1-10 Perday</li>
+                    <li>Di ajarkan Metode & Teknik Terbaik</li>
+                    <li>Dapat EA SINGCUAN GRATIS!</li>
+                    <li>Edukasi ZOOM Online Senin Sampe Jumat</li>
+                    <li>Bisa Private Offline di Kantor / Rumah</li>
+                    <li>Live Trade Tiap Hari</li>
+                </ul>
+            </div>
+            <div class="images-vip">
+                <div class="image-card-vip">
+                    <img src="img/INDIKATOR BMS.png" alt="Trading Image 1">
+                    <p>INDIKATOR BMS</p>
+                </div>
+                <div class="image-card-vip">
+                    <img src="img/INDIKATOR SFT.png" alt="Trading Image 2">
+                    <p>INDIKATOR SFT</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pricing">
+            <h2>Harga Promo</h2>
+            <p>
+                <span class="original-price">$7000</span>
+                <span class="discounted-price">$5000</span>
+            </p>
+            <p>Free 2 indikator custom winrate 100%</p>
+            <button class="cta-button-vip">Daftar Sekarang</button>
+        </div>
+    </div>
 
 
 
