--- a/lp/lp.html
+++ b/lp/lp.html
@@ -54,26 +54,25 @@
                     <div class="blur-background"></div>
                     <ul class="parallax__title_about">
                         <h1>ABOUT COMPANY</h1>
-                        <p>Techroom adalah perusahaan teknologi informasi dan komunikasi (ICT) yang didirikan pada tahun
-                            2021
-                            dengan tujuan utama membangun jaringan besar profesional teknologi di berbagai bidang.
-                            Mereka
-                            menyediakan platform bagi para penggemar teknologi untuk berbagi ide, mengembangkan
-                            keterampilan,
-                            dan belajar bersama, sambil membantu bisnis memanfaatkan potensi internet.
-                        </p>
+                        <p>Trading Room adalah komunitas edukasi trading yang berkomitmen untuk memberikan pendidikan dan pelatihan trading yang berkualitas tinggi kepada masyarakat. Kami percaya bahwa pengetahuan dan keterampilan trading yang tepat dapat membantu individu mencapai kesuksesan finansial.
                         <br />
-                        <p>Selain itu, Techroom menawarkan berbagai layanan, termasuk pengembangan web dan aplikasi
-                            mobile,
-                            desain UI/UX, konsultasi IT, solusi IT, jaringan pengembang, mentorship, dan pemeliharaan
-                            perangkat
-                            lunak. Mereka juga memiliki komunitas pengembang yang berkembang pesat, di mana anggota
-                            dapat
-                            berinteraksi baik secara online maupun offline untuk berbagi ide dan saling membantu dalam
-                            pertumbuhan profesional.
                         </p>
                     </ul>
-                </div>
+                    <div class="visimisi">
+                        <div class="column-visimisi">
+                            <h2>Visi</h2>
+                            <p>Menjadi komunitas edukasi trading terkemuka di Indonesia yang membantu menciptakan generasi trader yang cerdas, berani, dan sukses.</p>
+                        </div>
+                        <div class="column">
+                            <h2>Misi</h2>
+                            <ul>
+                                <li>Memberikan pendidikan dan pelatihan trading yang berkualitas tinggi dan relevan dengan kebutuhan pasar.</li>
+                                <li>Membantu individu mengembangkan keterampilan dan pengetahuan trading yang tepat untuk mencapai kesuksesan finansial.</li>
+                                <li>Menciptakan komunitas trader yang aktif, saling mendukung, dan berbagi pengetahuan.</li>
+                            </ul>
+                        </div>
+                    </div><br><br><br><br><br>
+                </div> 
             </section>
 
             <div class="parallax__visuals2">
@@ -95,84 +94,21 @@
 
 
     <!-- profile -->
-    <div class="container2">
-        <br><br>
-        <center>
-            <h1 class="h1-profile"> Profile Worker </h1>
-        </center>
-        <div class="slide-container swiper">
-            <div class="slide-content">
-                <div class="card-wrapper swiper-wrapper">
-                    <div class="card-profile swiper-slide">
-                        <div class="image-content-profile">
-
-                            <div class="card-image-profile">
-                                <img src="img/D.jpg" alt="image" class="card-img">
-                            </div>
-                        </div>
-                        <div class="card-content-profile">
-                            <h2 class="name-profile">DENI DOLLAR</h2>
-                            <p class="description-profile">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
-                                nulla optio ab minima vero</p>
-                        </div>
-                    </div>
-                    <div class="card-profile swiper-slide">
-                        <div class="image-content-profile">
-
-                            <div class="card-image-profile">
-                                <img src="img/Y.JPG" alt="image" class="card-img">
-                            </div>
-                        </div>
-                        <div class="card-content-profile">
-                            <h2 class="name-profile">YAYAT ILYAS</h2>
-                            <p class="description-profile">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
-                                nulla optio ab minima vero </p>
-
-
-                        </div>
-                    </div>
-                    <div class="card-profile swiper-slide">
-                        <div class="image-content-profile">
-
-
-                            <div class="card-image-profile">
-                                <img src="img/F.JPG" alt="image" class="card-img">
-                            </div>
-                        </div>
-
-                        <div class="card-content-profile">
-                            <h2 class="name-profile">FAJAR PRAWIRA</h2>
-                            <p class="description-profile">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
-                                nulla optio ab minima vero</p>
-                        </div>
-                    </div>
-                    <div class="card-profile swiper-slide">
-                        <div class="image-content-profile">
-
-
-                            <div class="card-image-profile">
-                                <img src="img/F.JPG" alt="image" class="card-img">
-                            </div>
-                        </div>
-
-                        <div class="card-content-profile">
-                            <h2 class="name-profile">FAJAR PRAWIRA</h2>
-                            <p class="description-profile">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
-                                nulla optio ab minima vero</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-button-next swiper-navBtn"></div>
-            <div class="swiper-button-prev swiper-navBtn"></div>
-            <div class="swiper-pagination"></div>
-        </div><br><br><br><br><br><br><br><br><br><br>
-    </div><div style="border-bottom: 2px dashed black; width: 100%;"></div><div style="border-bottom: 2px dashed black; width: 100%;"></div>
-
-
-
-
-
+    <div class="carousel-visimisi">
+        <div class="carousel-track-visimisi">
+            <img src="img/Y.JPG" alt="Slide 1">
+            <img src="img/c1.jpeg" alt="Slide 2">
+            <img src="img/c2.jpeg" alt="Slide 3">
+            <img src="img/makan.jpeg" alt="Slide 4">
+            <img src="img/INDIKATOR BMS.png" alt="5">
+            <img src="img/INDIKATOR SFT.png" alt="6">
+            <img src="img/logo-tradingroom.png" alt="7">
+            <img src="img/D.jpg" alt="8">
+            <img src="img/deni.jpg" alt="9">
+            <img src="img/Adobe Express - file.png" alt="10">
+        </div>
+    </div>
+<br><br><br><br>
 
 
 
@@ -321,9 +257,11 @@
     <!-- kontak -->
 
     <div class="container-kontak1">
+        <h1 class="title-master">MASTER TRADING ROOM</h1>
         <div class="card-border-kontak">
+            
         <div id="app" class="container-kontak">
-
+            
             <card data-image="img/mraip.jpeg">
                 <h1 slot="header">Mr. Aip</h1>
                 <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -383,7 +321,7 @@
 
     <!-- Testimonial -->
 
-
+<br><br>
     <div class="container-testimonial-body">
         <div class="container-testimonial">
             <div class="title-testimonial">TESTIMONI MEMBER TRADING ROOM</div>
@@ -396,10 +334,9 @@
                     <i class="fas fa-star"></i>
                 </div>
                 <div class="quote">
-                    "Produk yang sangat cocok untuk melembabkan kulit kering. Baik untuk dipakai setiap hari dan tidak
-                    menimbulkan efek samping."
+                    "Trading Room memiliki tim mentor yang berpengalaman dan terlatih. Mereka membantu saya mengembangkan strategi trading yang efektif dan meningkatkan keuntungan saya."
                 </div>
-                <div class="author">- Samantha Anderson -</div>
+                <div class="author">- Budi -</div>
                 <img src="img/t1.jpg" alt="Profile picture of Samantha Anderson" width="60" height="60">
                 <div class="quote-icon">
                     <i class="fas fa-quote-right"></i>
@@ -418,7 +355,7 @@
                     dan
                     lembab."
                 </div>
-                <div class="author">- Rachel Carl -</div>
+                <div class="author">- Maulana Farel -</div>
                 <img src="img/t2.jpg" alt="Profile picture of Rachel Carl" width="60" height="60">
                 <div class="quote-icon">
                     <i class="fas fa-quote-right"></i>
@@ -433,11 +370,9 @@
                     <i class="fas fa-star"></i>
                 </div>
                 <div class="quote">
-                    "Sudah satu minggu pemakaian dan saya sudah merasakan efeknya! Kulit wajah saya menjadi lebih cerah
-                    dan
-                    lembab."
+                    "Trading Room telah membantu saya memahami dasar-dasar trading dan meningkatkan keterampilan saya. Saya sangat puas dengan layanan mereka!"
                 </div>
-                <div class="author">- Rachel Carl -</div>
+                <div class="author">- Rina Nurlela-</div>
                 <img src="img/t3.jpg" alt="Profile picture of Rachel Carl" width="60" height="60">
                 <div class="quote-icon">
                     <i class="fas fa-quote-right"></i>
@@ -456,7 +391,7 @@
                     dan
                     lembab."
                 </div>
-                <div class="author">- Rachel Carl -</div>
+                <div class="author">- Bahar Ramdhani -</div>
                 <img src="img/t4.jpg" alt="Profile picture of Rachel Carl" width="60" height="60">
                 <div class="quote-icon">
                     <i class="fas fa-quote-right"></i>
