--- a/lp/lp.html
+++ b/lp/lp.html
@@ -247,7 +247,7 @@
 
             </div>
             <div class="card-promo">
-                <br>
+                <br>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
                 <div class="card-content-promo">
                     <p class="level-promo1">Copy Trade GOLDBUSTER</p>
                     <h2>Start Min : <span class="harga-promo">$5000</span></h2>
@@ -312,32 +312,11 @@
         <div class="card-border-kontak">
             <h1 class="title-master">MENTOR TRADING ROOM</h1>
             <div id="app" class="container-kontak">
-
-                <a href="https://www.instagram.com/aipsumpena26?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+               
+                <a href="www.instagram.com/deni_dollar"
                     target="_blank">
-                    <card data-image="img/mraip.jpeg">
-                        <h1 slot="header">Aip Sumpena</h1>
-                        <p slot="content">Trader Profesional</p>
-                    </card>
-                </a>
-                <a href="https://www.instagram.com/ivanqo19?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank">
-                    <card data-image="img/ivan.jpg">
-                        <h1 slot="header">Ivanko</h1>
-                        <p slot="content">Trader Profesional</p>
-                    </card>
-                </a>
-                <a href="https://www.instagram.com/_milhamar_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank">
-                    <card data-image="img/ilham.jpg">
-                        <h1 slot="header">Ilham Dirham</h1>
-                        <p slot="content">Trader Profesional</p>
-                    </card>
-                </a>
-                <a href="https://www.instagram.com/dani_pradikta?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank">
-                    <card data-image="img/dani.jpg">
-                        <h1 slot="header">Dani Pradikta</h1>
+                    <card data-image="img/deni.jpg">
+                        <h1 slot="header">Deni Dollar</h1>
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
@@ -348,17 +327,38 @@
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
-                <a href="https://www.instagram.com/deni_dollar?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank">
-                    <card data-image="img/deni.jpg">
-                        <h1 slot="header">Deni Dollar</h1>
-                        <p slot="content">Trader Profesional</p>
-                    </card>
-                </a>
-                <a href="https://www.instagram.com/dnlyohansa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                <a href=""
                     target="_blank">
                     <card data-image="img/yohan.jpg">
                         <h1 slot="header">Daniel Yohansa</h1>
+                        <p slot="content">Trader Profesional</p>
+                    </card>
+                </a>
+                <a href=""
+                    target="_blank">
+                    <card data-image="img/dani.jpg">
+                        <h1 slot="header">Dani Pradikta</h1>
+                        <p slot="content">Trader Profesional</p>
+                    </card>
+                </a>
+                <a href=""
+                    target="_blank">
+                    <card data-image="img/ivan.jpg">
+                        <h1 slot="header">Ivanqo</h1>
+                        <p slot="content">Trader Profesional</p>
+                    </card>
+                </a>
+                <a href=""
+                    target="_blank">
+                    <card data-image="img/mraip.jpeg">
+                        <h1 slot="header">Aip Sumpena</h1>
+                        <p slot="content">Trader Profesional</p>
+                    </card>
+                </a>
+                <a href=""
+                    target="_blank">
+                    <card data-image="img/ilham.jpg">
+                        <h1 slot="header">Ilham Dirham</h1>
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
