--- a/lp/lp.html
+++ b/lp/lp.html
@@ -270,17 +270,23 @@
     <br><br><br><br><br><br>
 
 
-<div class="container-unggulan">
-    <div class="card-unggulan">
+    <div class="container-unggulan">
+        <div class="card-unggulan">
+            <center>
+                <img src="img/lexus.jpeg" id="openPopup">
+        </center><br><br>
         <center>
-            <img src="img/lexus.jpeg">
-    </center><br><br>
-    <center>
-        <a class="button-unggulan" href="">Join Our Program</a>
-    </center>
+            <a class="button-unggulan" href="">Join Our Program</a>
+        </center>
+        </div>
     </div>
-</div>
-
+    
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <span id="closePopup" class="close">&times;</span>
+        <img src="img/lexus.jpeg" alt="">
+        </div>
+    </div>
 
 
 
