--- a/lp/lp.html
+++ b/lp/lp.html
@@ -275,7 +275,7 @@
                 <img src="img/lexus.jpeg" id="openPopup">
         </center><br><br>
         <center>
-            <a class="button-unggulan" href="">Join Our Program</a>
+            <a class="button-unggulan" href="https://link.watzap.id/partner-trading-terbaik" target="_blank">Join Our Program</a>
         </center>
         </div>
     </div>
@@ -318,7 +318,7 @@
             <h1 class="title-master">MENTOR TRADING ROOM</h1>
             <div id="app" class="container-kontak">
                
-                <a href="www.instagram.com/deni_dollar"
+                <a href="https://www.instagram.com/deni_dollar/?utm_source=ig_web_button_share_sheet"
                     target="_blank">
                     <card data-image="img/deni.jpg">
                         <h1 slot="header">Deni Dollar</h1>
@@ -332,35 +332,35 @@
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
-                <a href=""
+                <a href="https://www.instagram.com/dnlyohansa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                     target="_blank">
                     <card data-image="img/yohan.jpg">
                         <h1 slot="header">Daniel Yohansa</h1>
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
-                <a href=""
+                <a href="https://www.instagram.com/danipradikta?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                     target="_blank">
                     <card data-image="img/dani.jpg">
                         <h1 slot="header">Dani Pradikta</h1>
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
-                <a href=""
+                <a href="https://www.instagram.com/ivanqo19?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                     target="_blank">
                     <card data-image="img/ivan.jpg">
                         <h1 slot="header">Ivanqo</h1>
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
-                <a href=""
+                <a href="https://www.instagram.com/aipsumpena26?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                     target="_blank">
                     <card data-image="img/mraip.jpeg">
                         <h1 slot="header">Aip Sumpena</h1>
                         <p slot="content">Trader Profesional</p>
                     </card>
                 </a>
-                <a href=""
+                <a href="https://www.instagram.com/_milhamar_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                     target="_blank">
                     <card data-image="img/ilham.jpg">
                         <h1 slot="header">Ilham Dirham</h1>
