--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
                             alt="" class="parallax__layer-img">
 
                         <div data-parallax-layer="3" class="parallax__layer-title">
-                            <h2 class="parallax__title">TRADING ROOM
+                            <h2 class="parallax__title"><span
+                                class="parallax__title"
+                                data-period="2000"
+                                data-rotate='[ "TRADING ROOM"]'></span>
                             </h2>
                         </div>
                         <img src="img/logo1.png" loading="eager" width="800" data-parallax-layer="4" alt=""
                             class="parallax__layer-img-logo">
                         <div data-parallax-layer="3" class="parallax__layer-title">
-                            <h2 class="parallax__title_2">TRADING ROOM
+                            <h2 class="parallax__title_2"><span
+                                class="parallax__title_2"
+                                data-period="2000"
+                                data-rotate='[ "TRADING ROOM"]'></span>
                             </h2>
 
                         </div>
@@ -41,7 +47,6 @@
                     </div>
                 </div>
             </section>
-            <br><br><br><br><br><br><br>
 
             <section class="parallax__content">
                 <div class="blok-partikel1"></div>
@@ -96,6 +101,7 @@
 
     <!-- profile -->
     <div class="carousel-visimisi">
+
         <div class="carousel-track-visimisi">
             <img src="img/K1.JPG" alt="Slide 1">
             <img src="img/K2.JPG" alt="Slide 2">
@@ -110,7 +116,7 @@
             <img src="img/K12.JPG" alt="">
         </div>
     </div>
-    <br><br><br><br>
+    <br><br><br><br><br>
 
 
 
@@ -261,7 +267,7 @@
 
 
     <!-- Unggulan -->
-    <br><br><br><br><br><br>
+    <br><br>
 
 
     <div class="container-unggulan">
@@ -282,20 +288,9 @@
 
 
 
-    <!-- <div class="container-unggulan">
-    
-            <div class="container-img-unggulan">
-                <a href="https://link.watzap.id/partner-trading-terbaik" target="_blank">
-                    <img src="img/lexus.jpeg" alt="">
-                </a>
-                <div class="container-unggulan">
-                    <button class="button-unggulan"><a href="https://link.watzap.id/partner-trading-terbaik"
-                        target="_blank">Hubungi Admin</a></button>
-                </div>
-            </div>
-            
 
-    </div> -->
+
+
 
 
     <!-- kontak -->
