--- a/index.html
+++ b/index.html
@@ -54,32 +54,34 @@
                 <div class="blur-card">
                     <div class="blur-background"></div>
                     <ul class="parallax__title_about">
-                        <h1>ABOUT COMPANY</h1>
-                        <p>Trading Room adalah komunitas edukasi trading yang berkomitmen untuk memberikan pendidikan
+                        <h1>PROFILE COMPANY</h1>
+                        <h2>|</h2>
+                        <p> Trading Room adalah komunitas edukasi trading yang berkomitmen untuk memberikan pendidikan
                             dan pelatihan trading yang berkualitas tinggi kepada masyarakat. Kami percaya bahwa
                             pengetahuan dan keterampilan trading yang tepat dapat membantu individu mencapai kesuksesan
                             finansial.
-                            <br />
                         </p>
                     </ul>
                     <div class="visimisi">
                         <div class="column-visimisi">
                             <h2>Visi</h2>
+                            <h6>|</h6>
                             <p>Menjadi komunitas edukasi trading terkemuka di Indonesia yang membantu menciptakan
                                 generasi trader yang cerdas, berani, dan sukses.</p>
                         </div>
                         <div class="column">
                             <h2>Misi</h2>
-                            <ul>
-                                <li>Memberikan pendidikan dan pelatihan trading yang berkualitas tinggi dan relevan
+                            <h6>|</h6>
+                               <span>
+                                 <li>Memberikan pendidikan dan pelatihan trading yang berkualitas tinggi dan relevan
                                     dengan kebutuhan pasar.</li>
                                 <li>Membantu individu mengembangkan keterampilan dan pengetahuan trading yang tepat
                                     untuk mencapai kesuksesan finansial.</li>
                                 <li>Menciptakan komunitas trader yang aktif, saling mendukung, dan berbagi pengetahuan.
                                 </li>
-                            </ul>
+                            </span>
                         </div>
-                    </div>
+                    </div><br><br><br><br>
                 </div>
             </section>
 
