--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 </li>
                             </span>
                         </div>
-                    </div><br><br><br><br>
+                    </div><br><br>
                 </div>
             </section>
 
