--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
 
     <!-- footer -->
-    <!-- <footer class="site-footer">
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
@@ -500,7 +500,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- particial -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
