--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <title>Landing Page</title>
 </head>
 <body>
+
+    <div class="wrapper_body">
+
+
     <div class="container1">
         <div class="parallax">
             <section class="parallax__header">
@@ -501,7 +505,7 @@
             </div>
         </div>
     </footer>
-
+</div>
     <!-- particial -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
