--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             target="_blank">Check Portofolio & Follow</a></button></center>
 
             </div>
-            <div class="card-promo">
+            <div class="card-promo2">
                 <br>
                 <div class="card-content-promo">
                     <p class="level-promo3">Copy Trade <br /> GOLDEN REFLECTION</p>
@@ -252,7 +252,7 @@
                             target="_blank">Check Portofolio & Follow</a></button></center>
 
             </div>
-            <div class="card-promo">
+            <div class="card-promo3">
                 <br>
                 <div class="card-content-promo">
                     <p class="level-promo1">Copy Trade GOLDBUSTER</p>
