--- a/index.html
+++ b/index.html
@@ -109,15 +109,24 @@
     <div class="carousel-visimisi">
 
         <div class="carousel-track-visimisi">
-            <img src="img/K1.JPG" alt="Slide 1">
-            <img src="img/K2.JPG" alt="Slide 2">
-            <img src="img/K4.JPG" alt="Slide 3">
-            <img src="img/K5.JPG" alt="Slide 4">
-            <img src="img/K6.JPG" alt="5">
+            <img src="img/K1.JPG" alt="">
+            <img src="img/p1.jpg" alt="">
+            <img src="img/K2.JPG" alt="">
+            <img src="img/p2.jpg" alt="">
+            <img src="img/K4.JPG" alt="">
+            <img src="img/p3.jpg" alt="">
+            <img src="img/K5.JPG" alt="">
+            <img src="img/p4.jpg" alt="">
+            <img src="img/K6.JPG" alt="">
+            <img src="img/p5.jpg" alt="">
             <img src="img/K7.JPG" alt="">
+            <img src="img/p6.jpg" alt="">
             <img src="img/K8.JPG" alt="">
+            <img src="img/p7.jpg" alt="">
             <img src="img/K9.JPG" alt="">
+            <img src="img/p8.jpg" alt="">
             <img src="img/K10.JPG" alt="">
+            <img src="img/p9.jpg" alt="">
             <img src="img/K11.JPG" alt="">
             <img src="img/K12.JPG" alt="">
         </div>
@@ -154,11 +163,11 @@
             <div class="images-vip">
                 <div class="image-card-vip">
                     <img src="img/INDIKATOR BMS.png" alt="Trading Image 1">
-                    <p>INDIKATOR BMS</p>
+                    <p>FREE INDIKATOR BMS</p>
                 </div>
                 <div class="image-card-vip">
                     <img src="img/INDIKATOR SFT.png" alt="Trading Image 2">
-                    <p>INDIKATOR SFT</p>
+                    <p>FREE INDIKATOR SFT</p>
                 </div>
             </div>
         </div>
