--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image" href="img/logo1.png">
+    <link rel="icon" type="image" href="img/logo1.webp">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
@@ -33,7 +33,7 @@
                                 data-rotate='[ "TRADING ROOM"]'></span>
                             </h2>
                         </div>
-                        <img src="img/logo1.png" loading="eager" width="800" data-parallax-layer="4" alt=""
+                        <img src="img/logo1.webp" loading="lazy" width="800" data-parallax-layer="4" alt=""
                             class="parallax__layer-img-logo">
                         <div data-parallax-layer="3" class="parallax__layer-title">
                             <h2 class="parallax__title_2"><span
