--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 data-rotate='[ "TRADING ROOM"]'></span>
                             </h2>
                         </div>
-                        <img src="img/logo1.webp" loading="lazy" width="800" data-parallax-layer="4" alt=""
+                        <img src="img/logo1.webp" loading="eager" width="800" data-parallax-layer="4" alt=""
                             class="parallax__layer-img-logo">
                         <div data-parallax-layer="3" class="parallax__layer-title">
                             <h2 class="parallax__title_2"><span
