--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="parallax__visuals">
                     <div class="parallax__black-line-overflow"></div>
                     <div data-parallax-layers class="parallax__layers">
-                        <img src="img/pexels-pixabay-53212.jpg" loading="eager" width="800" data-parallax-layer="1"
+                        <img src="img/pexels-pixabay-53212.jpg" loading="lazy" width="800" data-parallax-layer="1"
                             alt="" class="parallax__layer-img">
 
                         <div data-parallax-layer="3" class="parallax__layer-title">
@@ -33,7 +33,7 @@
                                 data-rotate='[ "TRADING ROOM"]'></span>
                             </h2>
                         </div>
-                        <img src="img/logo1.webp" loading="eager" width="800" data-parallax-layer="4" alt=""
+                        <img src="img/logo1.webp" loading="eager" fetchpriority="high" width="800" data-parallax-layer="4" alt=""
                             class="parallax__layer-img-logo">
                         <div data-parallax-layer="3" class="parallax__layer-title">
                             <h2 class="parallax__title_2"><span
