--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="parallax__black-line-overflow"></div>
                     <div data-parallax-layers class="parallax__layers">
                         <img src="img/pexels-pixabay-53212.jpg" loading="lazy" width="800" data-parallax-layer="1"
-                            alt="" class="parallax__layer-img">
+                             class="parallax__layer-img">
 
                         <div data-parallax-layer="3" class="parallax__layer-title">
                             <h2 class="parallax__title"><span
@@ -33,7 +33,7 @@
                                 data-rotate='[ "TRADING ROOM"]'></span>
                             </h2>
                         </div>
-                        <img src="img/logo1.webp" loading="eager" fetchpriority="high" width="800" data-parallax-layer="4" alt=""
+                        <img src="img/logo1.webp" loading="eager" fetchpriority="high" width="800" data-parallax-layer="4"
                             class="parallax__layer-img-logo">
                         <div data-parallax-layer="3" class="parallax__layer-title">
                             <h2 class="parallax__title_2"><span
@@ -106,24 +106,24 @@
     <div class="carousel-visimisi">
 
         <div class="carousel-track-visimisi">
-            <img src="img/K1.JPG" alt="">
-            <img src="img/K2.JPG" alt="">
-            <img src="img/p2.jpg" alt="">
-            <img src="img/K4.JPG" alt="">
-            <img src="img/p3.jpg" alt="">
-            <img src="img/K5.JPG" alt="">
-            <img src="img/K6.JPG" alt="">
-            <img src="img/p5.jpg" alt="">
-            <img src="img/K7.JPG" alt="">
-            <img src="img/p6.jpg" alt="">
-            <img src="img/K8.JPG" alt="">
-            <img src="img/p7.jpg" alt="">
-            <img src="img/K9.JPG" alt="">
-            <img src="img/p8.jpg" alt="">
-            <img src="img/K10.JPG" alt="">
-            <img src="img/p9.jpg" alt="">
-            <img src="img/K11.JPG" alt="">
-            <img src="img/K12.JPG" alt="">
+            <img src="img/K1.JPG">
+            <img src="img/K2.JPG">
+            <img src="img/p2.jpg">
+            <img src="img/K4.JPG">
+            <img src="img/p3.jpg">
+            <img src="img/K5.JPG">
+            <img src="img/K6.JPG">
+            <img src="img/p5.jpg">
+            <img src="img/K7.JPG">
+            <img src="img/p6.jpg">
+            <img src="img/K8.JPG">
+            <img src="img/p7.jpg">
+            <img src="img/K9.JPG">
+            <img src="img/p8.jpg">
+            <img src="img/K10.JPG">
+            <img src="img/p9.jpg">
+            <img src="img/K11.JPG">
+            <img src="img/K12.JPG">
         </div>
     </div>
     <br><br><br><br><br>
@@ -283,7 +283,7 @@
     <div class="container-unggulan">
         <div class="card-unggulan">
             <center>
-                <img src="img/lexus.jpeg" id="openPopup">
+                <img src="img/lexus.jpeg">
             </center><br><br>
             <center>
                 <a class="button-unggulan" href="https://link.watzap.id/partner-trading-terbaik" target="_blank">Join
