--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="container-cpt-utama">
         <div class="cpt-container">
             <div class="cpt-header">
-                <h1 class="cpt-title">Copy Trade Circle</h1>
+                <h1 class="cpt-title">Copy Trade</h1>
                 <p class="cpt-subtitle">Bergabunglah dengan Komunitas Trading Terbaik</p>
             </div>
     
