--- a/index.html
+++ b/index.html
@@ -101,8 +101,26 @@
 
     <!-- profile -->
     <div class="carousel-visimisi">
-
-        <div class="carousel-track-visimisi">
+        <div class="carousel-track-visimisi" id="carousel">
+            <img src="img/K1.JPG">
+            <img src="img/K2.JPG">
+            <img src="img/p2.jpg">
+            <img src="img/K4.JPG">
+            <img src="img/p3.jpg">
+            <img src="img/K5.JPG">
+            <img src="img/K6.JPG">
+            <img src="img/p5.jpg">
+            <img src="img/K7.JPG">
+            <img src="img/p6.jpg">
+            <img src="img/K8.JPG">
+            <img src="img/p7.jpg">
+            <img src="img/K9.JPG">
+            <img src="img/p8.jpg">
+            <img src="img/K10.JPG">
+            <img src="img/p9.jpg">
+            <img src="img/K11.JPG">
+            <img src="img/K12.JPG">
+            <!-- Duplikasi gambar untuk looping tanpa jeda -->
             <img src="img/K1.JPG">
             <img src="img/K2.JPG">
             <img src="img/p2.jpg">
@@ -122,6 +140,12 @@
             <img src="img/K11.JPG">
             <img src="img/K12.JPG">
         </div>
+    </div>
+    <div class="modal" id="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <span class="prev" onclick="prevImage()">&#10094;</span>
+        <img id="modalImg">
+        <span class="next" onclick="nextImage()">&#10095;</span>
     </div>
     <br><br><br><br><br>
 
