--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="images-vip">
                 <div class="image-card-vip">
                     <img src="img/INDIKATOR BMS.png" alt="Trading Image 1">
-                    <p>FREE INDIKATOR BMS</p>
+                    <p>FREE INDIKATOR BMW</p>
                 </div>
                 <div class="image-card-vip">
                     <img src="img/INDIKATOR SFT.png" alt="Trading Image 2">
