--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
                 <h2>7 Keuntungan Bergabung</h2>
                 <ul>
                     <li>Full Edukasi</li>
-                    <li>Signal Trading 1-10 Perday</li>
+                    <li>Signal Trading 1-10 Perhari</li>
                     <li>Di ajarkan Metode & Teknik Terbaik</li>
                     <li>Dapat EA SINGCUAN GRATIS!</li>
                     <li>Edukasi ZOOM Online Senin Sampe Jumat</li>
                     <li>Bisa Private Offline di Kantor / Rumah</li>
-                    <li>Live Trade Tiap Hari</li>
+                    <li>Live Trade Setiap Hari</li>
                 </ul>
             </div>
             <div class="images-vip">
@@ -249,7 +249,7 @@
 
             <div class="cpt-content-wrapper">
                 <div class="cpt-benefit-box">
-                    <h3 class="cpt-benefit-title">Untuk Master</h3>
+                    <h3 class="cpt-benefit-title"><span class="cpt-master">Untuk Master</span></h3>
 
                     <li class="cpt-benefit-item">Dapatkan Followers Berkualitas</li>
                     <li class="cpt-benefit-item">Tingkatkan Penghasilan</li>
@@ -258,7 +258,7 @@
                 </div>
 
                 <div class="cpt-benefit-box">
-                    <h3 class="cpt-benefit-title">Untuk Follower</h3>
+                    <h3 class="cpt-benefit-title"><span class="cpt-follower">Untuk Follower</span></h3>
 
                     <li class="cpt-benefit-item">Akses ke Master Terverifikasi</li>
                     <li class="cpt-benefit-item">Strategi Trading Optimal</li>
