--- a/index.html
+++ b/index.html
@@ -472,12 +472,21 @@
         <button class="carousel-btn prev">&#10094;</button>
       
         <div class="carousel-track">
-          <div class="carousel-slide"><img src="img/testi1.webp" alt="Testimoni 1" /></div>
-          <div class="carousel-slide"><img src="img/testi1.webp" alt="Testimoni 2" /></div>
-          <div class="carousel-slide"><img src="img/testi1.webp" alt="Testimoni 3" /></div>
-          <div class="carousel-slide"><img src="img/testi1.webp" alt="Testimoni 4" /></div>
-          <div class="carousel-slide"><img src="img/testi1.webp" alt="Testimoni 5" /></div>
-          <div class="carousel-slide"><img src="img/testi1.webp" alt="Testimoni 6" /></div>
+          <div class="carousel-slide"><img src="img/1.png" alt="Testimoni 1" /></div>
+          <div class="carousel-slide"><img src="img/2.png" alt="Testimoni 2" /></div>
+          <div class="carousel-slide"><img src="img/3.png" alt="Testimoni 3" /></div>
+          <div class="carousel-slide"><img src="img/4.png" alt="Testimoni 4" /></div>
+          <div class="carousel-slide"><img src="img/5.png" alt="Testimoni 5" /></div>
+          <div class="carousel-slide"><img src="img/6.png" alt="Testimoni 6" /></div>
+          <div class="carousel-slide"><img src="img/7.png" alt="Testimoni 7" /></div>
+          <div class="carousel-slide"><img src="img/8.png" alt="Testimoni 8" /></div>
+          <div class="carousel-slide"><img src="img/9.png" alt="Testimoni 9" /></div>
+          <div class="carousel-slide"><img src="img/10.png" alt="Testimoni 10" /></div>
+          <div class="carousel-slide"><img src="img/11.png" alt="Testimoni 11" /></div>
+          <div class="carousel-slide"><img src="img/12.png" alt="Testimoni 12" /></div>
+          <div class="carousel-slide"><img src="img/13.png" alt="Testimoni 13" /></div>
+          <div class="carousel-slide"><img src="img/14.png" alt="Testimoni 14" /></div>
+          <div class="carousel-slide"><img src="img/15.png" alt="Testimoni 15" /></div>
         </div>
       
         <button class="carousel-btn next">&#10095;</button>
