--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="parallax__visuals">
                     <div class="parallax__black-line-overflow"></div>
                     <div data-parallax-layers class="parallax__layers">
-                        <img src="img/forex.jpg" loading="lazy" width="800" data-parallax-layer="1"
+                        <img src="img/forex.png" loading="lazy" width="800" data-parallax-layer="1"
                             class="parallax__layer-img">
 
                         <div data-parallax-layer="3" class="parallax__layer-title">
