--- a/index.html
+++ b/index.html
@@ -381,16 +381,13 @@
 
 
         <div class="container-unggulan">
+            <h1>PROGRAM UNGGULAN</h1>
             <div class="card-unggulan">
-                <center>
-                    <img src="img/lexus.jpeg">
-                </center><br><br>
-                <center>
-                    <a class="button-unggulan" href="https://link.watzap.id/partner-trading-terbaik"
-                        target="_blank">Join
-                        Our Program</a>
-                </center>
+                    <img src="img/mh.JPG">
             </div>
+            <a class="button-unggulan" href="https://link.watzap.id/partner-trading-terbaik"
+            target="_blank">Join
+            Our Program</a>
         </div>
 
 
