--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
         <div class="container-kontak1">
             <div class="card-border-kontak">
-                <h1 class="title-master">MENTOR TRADING ROOM</h1>
+                <h1 class="title-master">MENTOR <span>TRADING ROOM</span></h1>
                 <div id="app" class="container-kontak">
 
                     <a href="https://www.instagram.com/deni_dollar/?utm_source=ig_web_button_share_sheet"
