--- a/index.html
+++ b/index.html
@@ -240,37 +240,30 @@
 
             <div class="grid-panduan">
                 <div class="card-panduan">
-                    <img src="img/bgkon.jpg" alt="Tutorial Pemula">
+                    <img src="img/SIGNAL AKURAT.jpg" alt="Tutorial Pemula">
                     <p>Tutorial Trading level Pemula</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img/bgkon1.jpg" alt="Tutorial Advance">
+                    <img src="img/EDUKASI ANALISA TEKNIKAL.jpg" alt="Tutorial Advance">
                     <p>Tutorial Trading level Advance</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img3.jpg" alt="Analisa Eksklusif">
+                    <img src="img/MANAJEMEN RESIKO.jpg" alt="Analisa Eksklusif">
                     <p>Indikator Analisa Eksklusif</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img4.jpg" alt="Psikologi Trading">
+                    <img src="img/PSIKOLOGI TRADING.jpg" alt="Psikologi Trading">
                     <p>Psikologi & Mindset Trading</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img5.jpg" alt="Manajemen Risiko">
+                    <img src="img/TRKNIKAL DAN FUNDAMENTAL.jpg" alt="Manajemen Risiko">
                     <p>Manajemen Risiko & Modal</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img6.jpg" alt="Teknik Trading">
+                    <img src="img/TEKNIK TRADING.jpg" alt="Teknik Trading">
                     <p>Teknik Trading Simpel & Efektif</p>
                 </div>
-                <div class="card-panduan">
-                    <img src="img7.jpg" alt="Teknikal & Fundamental">
-                    <p>Edukasi Analisis Teknikal & Fundamental</p>
-                </div>
-                <div class="card-panduan">
-                    <img src="img8.jpg" alt="Signal Akurat">
-                    <p>Signal Trading Terbukti Akurat</p>
-                </div>
+
             </div>
             <center>
                 <button class="button-panduan"><a href="https://link.watzap.id/partner-trading-terbaik"
