--- a/index.html
+++ b/index.html
@@ -241,15 +241,15 @@
             <div class="grid-panduan">
                 <div class="card-panduan">
                     <img src="img/SIGNAL AKURAT.jpg" alt="Tutorial Pemula">
-                    <p>Tutorial Trading level Pemula</p>
+                    <p>Signal Akurat</p>
                 </div>
                 <div class="card-panduan">
                     <img src="img/EDUKASI ANALISA TEKNIKAL.jpg" alt="Tutorial Advance">
-                    <p>Tutorial Trading level Advance</p>
+                    <p>Edukasi Analisa Teknikal</p>
                 </div>
                 <div class="card-panduan">
                     <img src="img/MANAJEMEN RESIKO.jpg" alt="Analisa Eksklusif">
-                    <p>Indikator Analisa Eksklusif</p>
+                    <p>Manajemen Risiko & Modal</p>
                 </div>
                 <div class="card-panduan">
                     <img src="img/PSIKOLOGI TRADING.jpg" alt="Psikologi Trading">
@@ -257,7 +257,7 @@
                 </div>
                 <div class="card-panduan">
                     <img src="img/TRKNIKAL DAN FUNDAMENTAL.jpg" alt="Manajemen Risiko">
-                    <p>Manajemen Risiko & Modal</p>
+                    <p>Teknikal dan Fundamental</p>
                 </div>
                 <div class="card-panduan">
                     <img src="img/TEKNIK TRADING.jpg" alt="Teknik Trading">
