--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                         </div>
                         <div class="colum-kedua">
-                            <img src="img/produk.png" alt="">
+                            <img src="img/produk.png" alt="produk">
                             <div class="overlay-text">
                                 <p class="title-kedua">Orang yang Telah Gabung</p>
                                 <p class="jumlah-kedua">5.000+</p>
@@ -378,9 +378,11 @@
             <div class="card-unggulan">
                     <img src="img/mh.JPG">
             </div>
+            <center>
             <a class="button-unggulan" href="https://link.watzap.id/partner-trading-terbaik"
             target="_blank">Join
             Our Program</a>
+        </center>
         </div>
 
 
