--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
 
 
         <div class="container-unggulan">
-            <h1>PROGRAM UNGGULAN</h1>
+            <center>
+                <h1>PROGRAM UNGGULAN</h1>
+            </center>
             <div class="card-unggulan">
                     <img src="img/mh.JPG">
             </div>
@@ -473,7 +475,7 @@
 
 
         <div class="carousel-testimoni">
-            <div class="title-testimonial">TESTIMONI MEMBER <span>TRADING ROOM</span></div>
+            <div class="title-testimonial">TESTIMONI MEMBER YANG BERHASIL PROFIT</div>
             <button class="carousel-btn prev">&#10094;</button>
 
             <div class="carousel-track">
@@ -504,7 +506,6 @@
 
         <!-- Testimonial -->
 
-        <br><br>
         <div class="container-testimonial-body">
             <div class="container-testimonial">
 
@@ -611,7 +612,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-6 col-xs-12">
-                        <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
+                        <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by 
                             <a href="https://www.instagram.com/tradingroom.id?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                 target="_blank">Trading Room</a>.
                         </p>
